# context-router

./: .gitignore  CHANGELOG.md  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml
benchmarks/fixtures/: enterprise_contexts.json
benchmarks/results/: latest_results.json  latest_results.md
context_router/: __init__.py  benchmark.py  benchmark_data.py  benchmark_fixtures.py  benchmark_thresholds.py  demo.py  demo_data.py  deprecation.py  evaluation.py  observability.py
context_router/context/: __init__.py  context_pack.py  context_types.py  filters.py  memory_store.py  pii_filter.py  sqlite_memory_store.py  store_protocol.py  token_budget.py  validation.py
context_router/examples/: coding_agent.py  customer_assistant.py  integration_minimal.py  personal_assistant.py  robotics_agent.py
context_router/router/: __init__.py  base.py  config.py  (+4 more)
docs/: VERSIONING.md  api_reference.md  architecture_decisions.md  benchmark_interpretation.md  context_routing_vs_context_stuffing.md  examples.md  failure_modes.md  glossary.md  operations.md  pinned_repo_checklist.md  production_readiness.md  release_checklist.md  router_selection.md
tests/: test_benchmark_data.py  test_benchmark_fixtures.py  test_benchmark_thresholds.py  test_context.py  test_context_validation.py  test_deprecation.py  test_evaluation.py  test_filters.py  test_integration_minimal.py  test_pii_filter.py  test_public_api.py  test_routers.py  test_scoring.py  test_sqlite_memory_store.py  test_store_protocol.py  test_token_budget.py
(+4 files in other folders)
