[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-router"
version = "0.1.0"
description = "Route the right context to the right agent at the right time."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Aditya"}]
dependencies = [
  "numpy>=1.23",
  "sentence-transformers>=2.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["context_router*"]

[tool.setuptools.package-data]
context_router = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
